# PocketCode

./: README.md  build.gradle.kts  mobile_ide_demo.py  settings.gradle.kts  test_examples.py
app/: build.gradle.kts
app/src/androidTest/java/com/example/coderunner/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/pocketcode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  new.xml
app/src/main/cpp/: CMakeLists.txt  c_compiler.cpp  cpp_compiler.cpp  native-lib.cpp
app/src/main/java/com/example/coderunner/: LandingActivity.java  MainActivity.java
app/src/main/java/com/example/pocketcode/: MainActivity.java
app/src/main/python/: hello.py
app/src/main/res/anim/: pulse.xml
app/src/main/res/drawable/: feature_badge_bg.xml  glow_circle.xml  howto_bg.xml  ic_pocket_logo.xml  info_background.xml  input_queue_background.xml  input_terminal_background.xml  landing_card_bg.xml  primary_button_bg.xml  secondary_button_bg.xml
app/src/main/res/layout/: activity_landing.xml  activity_main.xml  activity_snippet_list.xml  drawer_snippet_list.xml  item_snippet.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/coderunner/: ExampleUnitTest.java
app/src/test/java/com/example/pocketcode/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
